# croma

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  flake.nix  justfile  pyproject.toml
.claude/agents/: abc-divergence-investigator.md
.claude/skills/divergence-triage/: SKILL.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  gates.yml  publish.yml  release.yml
crates/croma-cli/: Cargo.toml  README.md
crates/croma-cli/src/: agent.rs  agent_topics.json  cli.rs  main.rs
crates/croma-cli/tests/: cli.rs
crates/croma-core/: Cargo.toml
crates/croma-core/benches/: parser.rs  reader.rs  writer.rs
crates/croma-core/benches/common/: fixtures.rs
crates/croma-core/src/: agent.rs  diagnostic.rs  error.rs  fields.rs  lib.rs  model.rs  music.rs  musicxml.rs  options.rs  parser.rs  source.rs  surface.rs  test_support.rs  to_abc.rs
crates/croma-core/src/lower/: accidental.rs  align.rs  diagnostics.rs  mod.rs  mod_tests.rs  semantic.rs  tempo.rs  tie.rs  timeline.rs  tuplet.rs  voice.rs  voice_tests.rs
crates/croma-core/src/musicxml/: attributes.rs  barline.rs  direction.rs  grace.rs  harmony.rs  lyric.rs  mod.rs  mod_tests.rs  notation.rs  note.rs  score.rs
crates/croma-core/src/musicxml/read/: mod.rs  mod_tests.rs
crates/croma-core/src/parse/: barline.rs  decoration.rs  directive.rs  lyric.rs  mod.rs  mod_tests.rs  music.rs  note.rs
crates/croma-core/src/parse/field/: key.rs  meter.rs  misc.rs  mod.rs  mod_tests.rs  tempo.rs  voice.rs
crates/croma-core/src/syntax/: field.rs  lyric.rs  mod.rs  music.rs  tune.rs  tune_classify.rs  tune_tests.rs
crates/croma-fmt/: Cargo.toml  README.md
crates/croma-fmt/benches/: fmt.rs
crates/croma-fmt/benches/common/: fixtures.rs
crates/croma-fmt/src/: corpus_proof.rs  engine.rs  fixes.rs  fmt_first_demo.rs  lib.rs  verify.rs
crates/croma-fmt/tests/: corpus_throughput.rs
crates/croma-lsp/: Cargo.toml  README.md
crates/croma-lsp/src/: code_action.rs  completion.rs  corpus_proof.rs  diagnostics.rs  document.rs  formatting.rs  hover.rs  lib.rs  main.rs  position.rs  structure.rs  tables.rs  tokens.rs
docs/: README.md  agent.md  benchmarks.md  carriers.md  development-environment.md  editors.md  formatter.md  lsp.md  midi-directives.md  musicxml-reader.md  parser-backlog.md  releasing.md
docs/architecture/: abc-parser-design-analysis.md  abc-to-musicxml-roadmap.md  library-first.md
docs/comparison/abc2xml-divergences/: 00-SUMMARY.md  01-export-failures.md  02-phantom-measures.md  03-multi-measure-rest.md  04-barline-spaced-double.md  05-accidental-alter.md  06-duration.md  07-cascade-artifacts.md  08-tuplet.md  09-ties-and-slurs.md  10-directions.md  11-multipart-and-partgroup.md  12-phase33-triage-ledger.md  MIGRATION.md  RAW-BASELINE.md  README.md  TRIAGE.md  croma-fix-candidates.md  dropped.csv  per-file-manifest.csv  whitelist.csv
docs/corpus/: README.md  zenodo-10k-abc.tar.gz.sha256
docs/progress/: README.md  croma-progress.sql  phase-10-closure-report.md  phase-39-corpus-mismatch-burndown.md  phase-40-mismatch-followups.md  phase-41-residual-burndown.md  phase-42-residual-burndown.md  phase-43-residual-burndown.md  phase-44-residual-burndown.md  phase-45-residual-burndown.md  phase-46-residual-burndown.md  phase-47-residual-burndown.md  phase-48-divergence-triage.md  queries.sql
docs/reference/: corpus-inventory.md
docs/reference/abc-spec-kb/: README.md  abc-2.1-knowledge-base.md  abc-2.2-draft-appendix.md
docs/reference/abc-spec-kb/raw/: abc-2.1.dokuwiki.txt  abc-2.1.headers.txt  abc-2.1.html  abc-2.1.html.headers.txt  abc-2.2-draft.dokuwiki.txt  (+7 more)
docs/superpowers/plans/: 2026-06-07-croma-core-module-breakdown.md  2026-06-08-fmt-subcommand.md  2026-06-09-abc-writer.md  2026-06-10-midtune-key-meter.md  2026-06-12-empty-parser-backlog.md  2026-06-13-raw-comparator-whitelist.md
docs/superpowers/specs/: 2026-06-07-croma-core-module-breakdown-design.md  2026-06-08-fmt-subcommand-design.md  2026-06-09-abc-writer-design.md  2026-06-10-midtune-key-meter-design.md  2026-06-13-divergence-triage-design.md  2026-06-15-fmt-proven-feature-design.md  2026-06-15-musicxml-reader-design.md  2026-06-16-musicxml-reader-deferred-decisions.md  2026-06-16-musicxml-reader-promotion.md  2026-06-17-benchmark-suite-decisions.md  2026-06-17-lsp-promotion.md  2026-06-17-quality-pass-decisions.md  2026-06-17-release-mechanics-decisions.md  2026-06-17-zed-editor-client-design.md  next-mxml-deferred-epic.md
docs/testing/: corpus-reproducibility.md
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/languages/abc/: brackets.scm  config.toml  folds.scm  highlights.scm
editors/zed/src/: lib.rs
examples/: basic.abc
tests/: test_compare_cache.py  test_music21_polars_corpus_compare.py
tools/: bench_corpus_throughput.py  compare_cache.py  corpus_harness.py  corpus_smoke.py  land.py  land.sh  music21_compare.py  music21_polars_corpus_compare.py  musicxml_reverse_corpus_compare.py  prove_abc_roundtrip.py  prove_divergences.py  prove_fmt_lossless.py  prove_grammar_coverage.py  prove_lsp_fidelity.py  prove_lsp_totality.py  prove_reader_abc_roundtrip.py  provision_corpus.py  session_bootstrap.sh
tools/progress/: progress.py
tree-sitter-abc/: .gitignore  README.md  grammar.js  package.json
tree-sitter-abc/queries/: brackets.scm  folds.scm  injections.scm
tree-sitter-abc/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-abc/test/corpus/: decorations.txt  fields.txt  notes.txt  tunes.txt
tree-sitter-abc/test/fixtures/: markdown-injection.md  markdown-injection.scm
tree-sitter-abc/web/: README.md  demo.mjs  highlights.scm  index.html  tree-sitter-abc.wasm  verify.mjs
wiki/: Benchmarks.md  CLI-Usage.md  Contributing.md  Conversion-Challenges.md  Editors-and-Zed.md  FAQ.md  Formatter.md  Home.md  How-its-Proven.md  Installation.md  Language-Server.md  Library-Usage.md  MusicXML-Reader.md  Testing-Methodology.md  Troubleshooting.md  _Footer.md  _Sidebar.md  abc2xml-Comparison.md
