[workspace]
resolver = "3"
members = [
    "crates/croma-core",
    "crates/croma-cli",
    "crates/croma-fmt",
    "crates/croma-lsp",
]
# croma-lsp is PROMOTED (un-gated): the stdio language server ships in the
# default build. Its lsp-server/lsp-types deps land on the croma-lsp binary
# only; croma-core's default build stays zero-dep + crates.io-publishable.
# See docs/lsp.md.
default-members = ["crates/croma-core", "crates/croma-cli", "crates/croma-lsp"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ro-ag/croma"
rust-version = "1.96.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
