[package]
name = "croma-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for croma-core"

[[bin]]
name = "croma"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Experimental: surface the gated MusicXML -> Score reader via `croma read` and
# `croma musicxml2abc`. Forwards to croma-core's `musicxml-reader` feature, which
# pulls in roxmltree. The default build stays dep-free and exposes neither
# command.
musicxml-reader = ["croma-core/musicxml-reader"]

[dependencies]
croma-core = { path = "../croma-core" }
croma-fmt = { path = "../croma-fmt" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
anstream = "0.6"
