[package]
name = "croma-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for croma-core"
readme = "README.md"
keywords = ["abc", "musicxml", "music", "notation", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "croma"
path = "src/main.rs"

[lints]
workspace = true

[features]
# The MusicXML -> Score reader (`croma read` / `croma musicxml2abc`) is PROMOTED
# (un-gated): it ships in the default CLI build. This forwards to croma-core's
# `musicxml-reader` feature, which pulls in roxmltree — so roxmltree is a
# dependency of the CLI *binary*, never of the croma-core *library* default
# (which stays zero-dep + crates.io-publishable; see docs/musicxml-reader.md).
# Build a reader-less, dep-free CLI with `--no-default-features`.
default = ["musicxml-reader"]
musicxml-reader = ["croma-core/musicxml-reader"]

[dependencies]
croma-core = { path = "../croma-core", version = "1.0.0" }
croma-fmt = { path = "../croma-fmt", version = "1.0.0" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
anstream = "1.0"
