[package]
name = "croma-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Library-first ABC to MusicXML exporter"
readme = "../../README.md"
keywords = ["abc", "musicxml", "music", "notation"]
categories = ["parser-implementations"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
