[package]
name = "croma-fmt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ABC formatter library built on croma-core"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
croma-core = { path = "../croma-core" }
