[package]
name = "croma-fmt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ABC formatter library built on croma-core"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
croma-core = { path = "../croma-core" }

[dev-dependencies]
# Dev-only statistical benchmark harness (see croma-core's note). Plotters chain
# dropped; `cargo bench` still works via `cargo_bench_support`.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fmt"
harness = false
