[package]
name = "croma-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Language-server support for ABC using croma-core"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
croma-core = { path = "../croma-core" }
