[package]
name = "croma-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Language-server support for ABC using croma-core"
readme = "README.md"
keywords = ["abc", "music", "lsp", "language-server", "notation"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "croma-lsp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
croma-core = { path = "../croma-core", version = "1.1.0" }
# `croma-fmt` is itself zero-external-dep (path dep on croma-core only), so it
# introduces no third-party crate; it backs `textDocument/formatting` (R2) and
# the future `source.fixAll` code action (R3). Nothing flows into croma-core.
croma-fmt = { path = "../croma-fmt", version = "1.1.0" }
lsp-server = "0.7"
lsp-types = "0.97"
# `serde`/`serde_json` are shared deps of lsp-server + lsp-types; the transport
# glue (capability negotiation, message (de)serialisation) uses them directly.
# These land on the LSP crate only — never on croma-core.
serde = "1"
serde_json = "1"
